facet-args/tests/snapshots/err__error_bool_with_invalid_value_positional.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --enable maybe 
   ·          ──┬──
   ·            ╰── unexpected positional argument
   ╰────
