facet-args/tests/snapshots/err__error_missing_value_for_argument.snap
---
source: facet-args/tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::expected_value

  × Could not parse CLI arguments
   ╭────
 1 │ --concurrency 
   · ──────┬──────
   ·       ╰── expected `usize` value
   ╰────
  help: provide a value after the flag
