facet-args/tests/snapshots/err__error_missing_value_for_argument_short_eof.snap
---
source: facet-args/tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::expected_value

  × Could not parse CLI arguments
   ╭────
 1 │ -j 
   · ─┬
   ·  ╰── expected `usize` value
   ╰────
  help: provide a value after the flag
