facet-args/tests/snapshots/err__error_non_struct_type_not_supported.snap
---
source: facet-args/tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::unknown_subcommand

  × Could not parse CLI arguments
   ╭────
 1 │ error wrong type 
   · ──┬──
   ·   ╰── unknown subcommand `error`
   ╰────
  help: available subcommands:
          something
          else
