facet-args/tests/snapshots/err__error_option_with_multiple_values.snap
---
source: facet-args/tests/err.rs
assertion_line: 170
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
args::unexpected_positional

  × Could not parse CLI arguments
   ╭────
 1 │ --maybe value1 value2 
   ·                ───┬──
   ·                   ╰── unexpected positional argument
   ╰────
  help: available options:
              --maybe
