facet-args/tests/snapshots/err__error_tuple_struct_field_access.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --point.0 10 --point.1 20 
   · ────┬────
   ·     ╰── unknown long flag
   ╰────
