facet-args/tests/snapshots/err__error_unexpected_positional_arg.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ unexpected --name value 
   · ─────┬────
   ·      ╰── unexpected positional argument
   ╰────
