facet-args/tests/snapshots/err__error_unknown_argument.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --c0ncurrency 
   · ──────┬──────
   ·       ╰── unknown long flag
   ╰────
