facet-args/tests/snapshots/err__error_vec_with_incompatible_types.snap
---
source: facet-args/tests/err.rs
expression: err
---
[31mError:[0m 
   [38;5;246m╭[0m[38;5;246m─[0m[38;5;246m[[0m args:1:11 [38;5;246m][0m
   [38;5;246m│[0m
 [38;5;246m1 │[0m [38;5;249m-[0m[38;5;249m-[0m[38;5;249mn[0m[38;5;249mu[0m[38;5;249mm[0m[38;5;249mb[0m[38;5;249me[0m[38;5;249mr[0m[38;5;249ms[0m[38;5;249m [0m[31m1[0m[38;5;249m [0m[38;5;249mt[0m[38;5;249mw[0m[38;5;249mo[0m[38;5;249m [0m[38;5;249m3[0m
 [38;5;240m  │[0m           [31m┬[0m  
 [38;5;240m  │[0m           [31m╰[0m[31m─[0m[31m─[0m Unsupported type: got [31mVec<u32>[39m, wanted [32mnumeric type[39m
[38;5;246m───╯[0m
