facet-args/tests/snapshots/err__error_wrong_type_for_argument.snap
---
source: tests/err.rs
expression: "$crate :: common :: DiagnosticDisplayWrapper(& err).to_string()"
---
  × Could not parse CLI arguments
   ╭────
 1 │ --concurrency yes 
   ·               ─┬─
   ·                ╰── reflection error: Operation failed on shape usize: Failed to parse string value
   ╰────
